@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.448 2007-08-20 14:53:43 mh Exp $
+# $Id: CHANGES,v 1.449 2007-08-20 16:12:49 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.2.3 (2007/??/??)
+ - (2007/08/20) Fixed bug# 2094 and 2143 - 'Got no MainObject' warning in
+    Kernel/System/Crypt.pm
  - (2007/08/20) Fixed bug# 2192 - Useless fragments of old escalation mechanism
     produces errors.
  - (2007/08/17) Fixed bug# 1908 - Removed duplicate history entry for ticket
